--- a/index.html
+++ b/index.html
@@ -1,58 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enroll the Child</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-    <div class="back">
-        <a href="#home">Back</a>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Navbar with Logo</title>
+    <style>
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+      .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #f6f5f2;
+        padding: 15px 30px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      .logo {
+        font-size: 1.5em;
+        font-weight: bold;
+        color: #1e40af;
+      }
+      .nav-links {
+        list-style: none;
+        display: flex;
+        gap: 15px;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+      }
+      .nav-links li {
+        display: inline;
+        align-items: center;
+        padding: 20px;
+        justify-content: center;
+      }
+      .nav-links a {
+        text-decoration: none;
+        color: #4b5563;
+        font-weight: 700;
+        font-size: 30px;
+        transition: color 0.3s ease;
+      }
+      .nav-links a:hover {
+        color: #1e40af;
+        transition: 4s;
+      }
+      .video-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80vh;
+      }
+      video {
+        width: 80%;
+        max-width: 1000px;
+        border-radius: 10px;
+      }
+      a:hover {
+        color: black;
+      }
+    </style>
+  </head>
+  <body style="background-color: beige">
+    <nav class="navbar">
+      <div class="logo"><img src="logo.png" width="100px" />Neurodiverse</div>
+      <ul class="nav-links">
+        <li>
+          <a
+            href="index.html"
+            >Home</a
+          >
+        </li>
+        <li><a href="aboutus.html">About Us</a></li>
+        <li><a href="enroll.html">Enrollment</a></li>
+        <li>
+          <a
+            href="volunteer.html"
+            >Volunteer</a
+          >
+        </li>
+        <li>
+          <a
+            href="chatbot.html"
+            >Community</a
+          >
+        </li>
         
-    <div class="container">
-        <h2>Enroll a Child</h2>
-        <p>Provide the necessary details to help a child get support.</p>
-        <form id="enrollForm">
-            <label for="childName">Child's Full Name</label>
-            <input type="text" id="childName" name="childName" required>
-
-            <label for="dob">Date of Birth</label>
-            <input type="date" id="dob" name="dob" required>
-
-            <label for="gender">Gender</label>
-            <select id="gender" name="gender" required>
-                <option value="">Select</option>
-                <option value="Male">Male</option>
-                <option value="Female">Female</option>
-                <option value="Other">Other</option>
-            </select>
-
-            <label for="guardianName">Guardian's Name</label>
-            <input type="text" id="guardianName" name="guardianName" required>
-
-            <label for="contact">Guardian's Contact Number</label>
-            <input type="tel" id="contact" name="contact" required pattern="[0-9]{10}" placeholder="Enter 10-digit number">
-
-            <label for="support">Type of Support Needed</label>
-            <select id="support" name="support" required>
-                <option value="">Select</option>
-                <option value="Education">Education</option>
-                <option value="Medical Help">Medical Help</option>
-                <option value="Shelter">Shelter</option>
-                <option value="Food">Food</option>
-            </select>
-
-            <label for="photo">Upload Child's Photo (Optional)</label>
-            <input type="file" id="photo" accept="image/*">
-
-            <button type="submit">Submit</button>
-        </form>
-        <p id="successMessage" class="hidden">✅ Enrollment successful! We will contact you soon.</p>
+        <li><a href="donation.html">Donation</a></li>
+      </ul>
+    </nav>
+    <div class="video-container">
+      <video src="India Autism Center.mp4" width="1000px " controls></video>
     </div>
-
-    <script src="script.js"></script>
-</body>
+  </body>
 </html>
